#FRONT - Ajuste no Header

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous"
+/>
+<link
+    rel="stylesheet"
+    type="text/css"
+    href="https://cdn3.devexpress.com/jslib/18.2.6/css/dx.common.css"
+/>
+<link rel="stylesheet" href="https://npmcdn.com/react-bootstrap-table/dist/react-bootstrap-table-all.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+<link href="../src/fonts/fontawesome/css/all.min.css" rel="stylesheet" type="text/css">
+<link href="../src/css/sb-admin.css" rel="stylesheet">
+</link>
     <title>MeCardex</title>
   </head>
   <body>
