--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <link href="../src/fonts/fontawesome/css/all.min.css" rel="stylesheet" type="text/css">
 <link href="../src/css/sb-admin.css" rel="stylesheet">
 </link>
-    <title>MeCardex</title>
+    <title>Kardex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
