#FRONT - Ajustes no Logo e Quadro

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" type="image/x-icon" href="../src/assets/img/favicon.png">
     <link
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     rel="stylesheet"
@@ -14,6 +15,7 @@
     type="text/css"
     href="https://cdn3.devexpress.com/jslib/18.2.6/css/dx.common.css"
 />
+
 <link rel="stylesheet" href="https://npmcdn.com/react-bootstrap-table/dist/react-bootstrap-table-all.min.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
 <link href="../src/fonts/fontawesome/css/all.min.css" rel="stylesheet" type="text/css">
